@@ -1,5 +1,11 @@
 # $Id$
 
+2007-05-16	Denis M. Gabaidulin
+
+	* main/Utils/FileUtils.class.php: makeUniqueName() added.
+
+2007-05-14	Konstantin V. Arkhipov
+
 2007-05-15	Denis M. Gabaidulin
 
 	* main/Utils/RussianTextUtils.class.php: toTranslit(), toRussian()
